--- a/src/componentes/NavBar.css
+++ b/src/componentes/NavBar.css
@@ -1,15 +1,18 @@
-ul{
-    display: flex;
+ul {
+  display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
   gap: 200px;
   padding-right: 50px;
   font-size: 30px;
-  font-family:Georgia, 'Times New Roman', Times, serif
-  
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-
-ul li:hover{
-  background-color: #f0f0f0;
+.custom-navbar {
+  background-color: #e6f7ff;
+}
+ul li:hover {
+  background-color: rgb(202, 243, 243);
+  padding: 5px;
+  border-radius: 50%;
 }
