--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ header {
   width: 100%;
   margin-bottom: 20px;
   color: black;
+  background-color: #e6f7ff;
 }
 h1.tituloLogo {
   font-size: 40px;
