--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -1,25 +1,35 @@
-.wrapper{
-    display: flex;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; /* Centraliza verticalmente */
+  background-color: white;
+}
+.tituloP {
+  margin: 40px;
+}
+.estilo1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 50px;
+  margin-left: 20px;
+  margin-right: 50px;
+  font-size: x-large;
+  padding-bottom: 50px;
+}
+.imgP {
+  width: 500px;
+  height: auto;
+  border-radius: 1rem;
+}
+
+@media (max-width: 800px) {
+  .estilo1 {
     flex-direction: column;
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
-    margin-top: -50px;
-}
-.tituloP{
-    
-}
-.estilo1{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 50px;
-    margin-left: 20px;
-    margin-right: 50px;
-    font-size: x-large;
-    padding-bottom: 50px;
-}
-.imgP{
-    width: 500px; 
-    height: auto;
-    border-radius: 1rem;
+    padding-bottom: 10px;
+    margin-bottom: 40px;
+    border-bottom: 2px solid black;
+    margin-top: 20px;
+  }
 }
