--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -32,4 +32,9 @@
     border-bottom: 2px solid black;
     margin-top: 20px;
   }
+  .imgP {
+    width: 100%;
+    height: auto;
+    border-radius: 1rem;
+  }
 }
