--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -17,6 +17,14 @@
   margin-right: 50px;
   font-size: x-large;
   padding-bottom: 50px;
+  margin: 10px;
+}
+.destaque {
+  background-color: rgba(0, 0, 0, 0.056);
+  padding: 30px;
+  width: 100vw;
+  display: flex;
+  justify-content: space-evenly;
 }
 .imgP {
   width: 500px;
