--- a/src/routes/About.css
+++ b/src/routes/About.css
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-size: x-large;
   padding: 30px;
+  background-image: url(../public/img/banner-bg.png);
+  color: white;
+  height: 100vh;
 }
 
 .texto p {
