--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -3,7 +3,12 @@
   flex-direction: column;
   justify-content: center; /* Centraliza horizontalmente */
   align-items: center; /* Centraliza verticalmente */
-  background-color: white;
+  background-image: url(../public/img/banner-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: white;
 }
 .tituloP {
   margin: 40px;
