--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(../public/img/banner-bg.png);
+  background-image: url(../public/img/spaceStars.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -38,7 +38,7 @@
   border-radius: 1rem;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .estilo1 {
     flex-direction: column;
     padding-bottom: 10px;
