--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(../public/img/spaceStars.webp);
+  background-image: url(../img/spaceStars.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 50px;
+  gap: 16px;
   margin-left: 20px;
   margin-right: 50px;
   font-size: x-large;
@@ -26,9 +26,10 @@
   padding: 50px;
 }
 .destaque {
-  background-color: rgba(0, 0, 0, 0.056);
+  border-radius: 80px;
+  background-color: rgba(0, 0, 0, 0.3);
   padding: 50px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
 }
@@ -43,9 +44,9 @@
     flex-direction: column;
     padding-bottom: 10px;
     margin-bottom: 40px;
-    border-bottom: 2px solid black;
     margin-top: 20px;
   }
+
   .imgP {
     width: 100%;
     height: auto;
