--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -37,6 +37,19 @@
   width: 500px;
   height: 250px;
   border-radius: 1rem;
+  animation: pulse 1.5s infinite;
+  cursor: pointer;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @media (max-width: 1000px) {
