--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(../img/spaceStars.webp);
+  background-image: url(../img/banner-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
