--- a/src/routes/About.css
+++ b/src/routes/About.css
@@ -4,7 +4,7 @@
   align-items: center;
   font-size: x-large;
   padding: 30px;
-  background-image: url(../img/spaceStars2.jpg);
+  background-image: url(../img/banner-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
