--- a/src/routes/About.css
+++ b/src/routes/About.css
@@ -1,17 +1,24 @@
+.wrapper {
+  background-image: url(../img/banner-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
 .texto {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: x-large;
   padding: 30px;
-  background-image: url(../img/banner-bg.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+
   color: white;
   font-weight: 500;
-  height: 100vh;
+  height: auto;
 }
-
+.insta {
+  color: aliceblue;
+}
 .texto p {
   margin-bottom: 10px;
   line-height: 1.5;
