--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -6,8 +6,13 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  padding: 0 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.home-page img {
+.home-page .imgP {
   animation: updown 3s linear infinite;
 }
 /* Botão responsivo */
