--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -6,6 +6,15 @@
   background-position: center;
   background-attachment: fixed;
   color: white;
+  h2 {
+    margin-bottom: 60px;
+    font-size: xx-large;
+    font-weight: bolder;
+    background-color: rgba(255, 255, 255, 0.212);
+    color: rgb(255, 255, 255);
+    border-radius: 2em;
+    padding: 20px;
+  }
 }
 .tituloP {
   margin: 40px;
