--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -6,6 +6,8 @@
   background-position: center;
   background-attachment: fixed;
   color: white;
+  padding-top: 60px;
+  
   h2 {
     margin-bottom: 60px;
     font-size: xx-large;
@@ -14,6 +16,20 @@
     color: rgb(255, 255, 255);
     border-radius: 2em;
     padding: 20px;
+    
+      /* Gradiente no texto */
+      background: linear-gradient(90deg, #ff007f, #00ffff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
+      /* Borda ao redor do texto */
+      border: 4px solid #ff007f;
+      padding: 0px 40px;
+      border-radius: 15px;
+
+      /* Efeito de brilho na borda */
+      box-shadow: 0 0 20px rgba(255, 0, 127, 0.6);
+    }
   }
 }
 .tituloP {
