--- a/src/componentes/Sobre.css
+++ b/src/componentes/Sobre.css
@@ -16,3 +16,13 @@
     max-width: 600px;
   }
 }
+@media (max-width: 1024px) {
+  #sobre {
+    flex-direction: column;
+    padding: 80%;
+    img {
+      max-height: 300px;
+      border-radius: 2em;
+    }
+  }
+}
