--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -6,11 +6,14 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  padding: 0 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  .container-fluid {
+    padding: 0 150px;
+  }
 
   h2 {
     /* Gradiente no texto */
