--- a/src/componentes/Comum.css
+++ b/src/componentes/Comum.css
@@ -26,7 +26,9 @@
 @media (max-width: 1024px) {
   #comum {
     flex-direction: column-reverse;
-    margin: 0px;
+    margin: 80px 0px 0px 0px;
+    gap: 50px;
+
     img {
       max-height: 300px;
       border-radius: 2em;
