--- a/src/componentes/Sobre.css
+++ b/src/componentes/Sobre.css
@@ -19,7 +19,7 @@
 @media (max-width: 1024px) {
   #sobre {
     flex-direction: column;
-    padding: 80%;
+    padding: 20% 80%;
     img {
       max-height: 300px;
       border-radius: 2em;
