--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -6,6 +6,7 @@
   background-position: center;
   background-attachment: fixed;
   color: white;
+
   padding-top: 60px;
 
   h2 {
@@ -74,12 +75,19 @@
 }
 
 @media (max-width: 1000px) {
+  .wrapper {
+    h2 {
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+  }
+
   .estilo1 {
     flex-direction: column;
     padding-bottom: 10px;
     margin-bottom: 40px;
     margin-top: 20px;
-    padding: 10px;
+    padding: 20px;
   }
 
   .imgP {
