--- a/src/componentes/Comum.css
+++ b/src/componentes/Comum.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 40px;
   gap: 150px;
   margin-bottom: 280px;
   h3 {
@@ -23,7 +24,39 @@
     max-width: 600px;
   }
 }
-@media (max-width: 1024px) {
+
+.animar {
+  opacity: 0;
+  transform: translateY(15px);
+  transition: all 0.6s ease-out;
+}
+
+.animar.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Delay para aparecer um de cada vez */
+.animar:nth-child(1) {
+  transition-delay: 0.1s;
+}
+.animar:nth-child(2) {
+  transition-delay: 0.3s;
+}
+.animar:nth-child(3) {
+  transition-delay: 0.5s;
+}
+.animar:nth-child(4) {
+  transition-delay: 0.7s;
+}
+.animar:nth-child(5) {
+  transition-delay: 0.9s;
+}
+.animar:nth-child(6) {
+  transition-delay: 1.1s;
+}
+
+@media (max-width: 1200px) {
   #comum {
     flex-direction: column-reverse;
     margin: 80px 0px 0px 0px;
