--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -7,7 +7,7 @@
   background-attachment: fixed;
   color: white;
 
-  padding-top: 60px;
+  padding: 60px 40px;
 
   h2 {
     margin-bottom: 60px;
@@ -31,36 +31,40 @@
     /* Efeito de brilho na borda */
     box-shadow: 0 0 20px rgba(255, 0, 127, 0.6);
   }
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 por linha */
+    padding: 0px 40px;
+    justify-items: center;  /* alinha os cards horizontalmente */
+    align-items: start;     /* impede que fiquem desalinhados verticalmente */
+
+    gap: 30px;
+  }
 }
 
 .estilo1 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column-reverse;
   align-items: center;
   gap: 16px;
-  margin-left: 20px;
-  margin-right: 50px;
-  font-size: x-large;
+  font-size: large;
   padding-bottom: 50px;
-  margin: 10px;
-  padding: 50px;
 }
 .destaque {
   border-radius: 80px;
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 50px;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
-  flex-direction: row-reverse;
+  flex-direction: column-reverse;
 }
 .imgP {
-  width: 700px;
-  height: 450px;
+  max-width: 400px;
+  height: auto;
   border-radius: 1rem;
   animation: pulse 1.5s infinite;
   cursor: pointer;
   background-size: contain;
+  margin-bottom: 32px;
 }
 @keyframes pulse {
   0% {
@@ -80,20 +84,25 @@
       margin-left: 10px;
       margin-right: 10px;
     }
-  }
+    .projects-grid {
+      grid-template-columns: 1fr; /* vira 1 por linha no celular */
+    }
+   
 
   .estilo1 {
-    flex-direction: column;
+    flex-direction: column-reverse;
     padding-bottom: 10px;
-    margin-bottom: 40px;
-    margin-top: 20px;
-    padding: 20px;
+    margin: 20px 0 40px 0px;
+    padding: 0px;
+    width: 80vw;
   }
 
   .imgP {
+    max-width: 80vw;
     width: 100%;
     height: auto;
     max-height: 250px;
     border-radius: 1rem;
   }
 }
+
