--- a/src/routes/Portfolio.css
+++ b/src/routes/Portfolio.css
@@ -60,6 +60,7 @@
 .imgP {
   max-width: 400px;
   height: auto;
+  max-height: 200px;
   border-radius: 1rem;
   animation: pulse 1.5s infinite;
   cursor: pointer;
