--- a/src/componentes/Sobre.css
+++ b/src/componentes/Sobre.css
@@ -4,11 +4,7 @@
   align-items: center;
   justify-content: center;
   gap: 60px;
-  margin-bottom: 80px;
 
-  h2 {
-    display: inline-block;
-  }
   h3 {
     color: rgba(255, 255, 255, 0.647);
   }
@@ -23,7 +19,7 @@
 @media (max-width: 1024px) {
   #sobre {
     flex-direction: column;
-    padding: 20%;
+    padding: 20% 80%;
     img {
       max-height: 300px;
       border-radius: 2em;
